<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Functions"
    android:orientation="vertical"
    android:gravity="center" >

    <Button
        android:id="@+id/add_new_colony"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:background="#09AB4D"
        android:text="@string/colony_management"
        android:textColor="#ffffff"
        android:textSize="50sp" />

    <Button
        android:id="@+id/typical_inspection"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:background="#09AB4D"
        android:text="@string/typical_inspection"
        android:textColor="#ffffff"
        android:textSize="50sp" />

    <Button
        android:id="@+id/special_inspection"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:background="#09AB4D"
        android:text="@string/special_inspection"
        android:textColor="#ffffff"
        android:textSize="50sp" />

    <Button
        android:id="@+id/reporting"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="#09AB4D"
        android:text="@string/reporting"
        android:textColor="#ffffff"
        android:layout_marginBottom="50dp"
        android:textSize="50sp" />

    <Button
        android:id="@+id/update"
        android:layout_width="800dp"
        android:layout_height="100dp"
        android:background="#09AB4D"
        android:text="@string/UpdateButton"
        android:textColor="#ffffff"
        android:textSize="50sp" />

</LinearLayout>