<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20sp">

        <Button
            android:id="@+id/colonyManagementAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/colonyManagementCreateButton"
            android:textSize="30sp"
            android:background="#09AB4D"
            android:textColor="#ffffff"
            />

        <Button
            android:id="@+id/colonyManagementEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/colonyManagementEditButton"
            android:textSize="30sp"
            android:background="#09AB4D"
            android:textColor="#ffffff"
            />

        <Button
            android:id="@+id/colonyManagementDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/colonyManagementDeleteButton"
            android:textSize="30sp"
            android:background="#09AB4D"
            android:textColor="#ffffff"
            />

        <Button
            android:id="@+id/colonyManagementBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/colonyPagesReturnButton"
            android:textSize="30sp"
            android:background="#09AB4D"
            android:textColor="#ffffff"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>